@@ -8,7 +8,7 @@ namespace LHAPDF {
   /// Implementation of bilinear interpolation
   class BilinearInterpolator : public Interpolator {
   public:
-    double interpolateXQ2(PID_t id, double x,  double q2) const;
+    double interpolateXQ2(int id, double x,  double q2) const;
   };
 
 
