@@ -1,5 +1,5 @@
 # TODO: LHAPDFConfig.h -> LHAPDF/Config.h
-# TODO: Types.h -> Utils.h, remove PID_t, and merge in version functions
+# TODO: Types.h -> Utils.h, remove int, and merge in version functions
 # TODO: Make separate Errors.h/Exceptions.h header
 # TODO: Put path functions in utils or a special Paths.h?
 # TODO: Provide a convenience LHAPDF.h to include all the main API elements?
@@ -11,7 +11,8 @@ pkginclude_HEADERS = \
   Extrapolator.h \
   AlphaS.h \
   LHAPDFConfig.h \
-  Types.h \
+  Utils.h \
+  Exceptions.h \
   Version.h \
   Factories.h \
   NearestPointExtrapolator.h \
