@@ -13,7 +13,7 @@ namespace LHAPDF {
     /// \param X the momentum fraction
     /// \param Q2 the squared energy scale
     /// \return the xfx value at (X,Q2)
-    double extrapolateXQ2(PID_t, double x, double q2 ) const;
+    double extrapolateXQ2(int, double x, double q2 ) const;
 
   };
 
