@@ -1,6 +1,6 @@
 #pragma once
 
-#include <LHAPDF/Types.h>
+#include <LHAPDF/Utils.h>
 #include <boost/filesystem.hpp>
 #include <boost/algorithm/string.hpp>
 #include <vector>
