@@ -5,7 +5,7 @@
 namespace LHAPDF {
 
 
-  double ErrExtrapolator::extrapolateQ2(const PDFGrid& grid, PID_t id, double x, double q2) const {
+  double ErrExtrapolator::extrapolateQ2(const PDFGrid& grid, int id, double x, double q2) const {
     std::cerr << "Extrapolation not allowed." << std::endl;
     throw -1;
   }
